Added findGeneByName endpoint
